Get the app and newsletter sections completed

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <p class="para"> 
+                                    <p class="para">
                                         Delicious dishes, cozy ambiance, and exceptional service.
                                         A must-visit for food lovers seeking bold flavors and
                                         unforgettable dining experiences. Highly recommended,
@@ -282,6 +282,43 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="wrapper p-top">
+                <div class="app-container flex between">
+                    <div class="image-container">
+                        <img src="images/mobile-app.png">
+                    </div>
+
+                    <div class="content">
+                        <h5>Our Application</h5>
+                        <h2>Simple Way To <br> Order Your Food</h2>
+                        <p class="para">Discover food wherever <br> and whenever
+                            and get your food delivery quickly.
+                        </p>
+                        <a href="#" class="btn">Get the App</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="wrapper p-top">
+                <div class="text-center">
+                    <h5>Subscribe Us</h5>
+                    <h2>Subscribe To Our Newsletter</h2>
+                    <p class="para m-auto">
+                        We recommend you to subscribe our newspaper, drop your email below to get daily update about us.
+                    </p>
+
+                    <label class="input-container flex m-auto mt-4">
+                        <input type="email" name="email" id="email"
+                        placeholder="Enter your email address" autocapitalize="off">
+                        <a href="#" class="btn">Subscribe</a>
+                    </label>
                 </div>
             </div>
         </section>
