--- a/index.html
+++ b/index.html
@@ -199,87 +199,86 @@
                     <img src="images/delivery-boy-with-phone.png">
                 </div>
 
-                <div class="content">
+                <div class="review-container">
                     <h5>Our reviews</h5>
                     <h2>What they say?</h2>
-                    <div class="review-container">
-                        <div class="swiper mySwiper">
-                            <div class="swiper-wrapper mt-4">
-                                <div class="swiper-slide">
-                                    <div class="flex gap-2">
-                                        <div class="profile">
-                                            <img src="images/profile1.jpeg">
-                                        </div>
-                                        <div>
-                                            <h4>Guy Hawkins</h4>
-                                            <div class="mt-half">
-                                                <i class="fa-solid fa-star"></i>
-                                                <i class="fa-solid fa-star"></i>
-                                                <i class="fa-solid fa-star"></i>
-                                                <i class="fa-solid fa-star"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p class="para">
-                                        Foodie is the best. Besides the many delicious meals,
-                                        the service is also very good, especially very fast
-                                        delivery. I highly recommend Foodie to you.
-                                    </p>
-                                </div>
 
-                                <div class="swiper-slide">
-                                    <div class="flex gap-2">
-                                        <div class="profile">
-                                            <img src="images/profile2.jpeg">
-                                        </div>
-                                        <div>
-                                            <h4>Sophia Anderson</h4>
-                                            <div class="mt-half">
-                                                <i class="fa-solid fa-star"></i>
-                                                <i class="fa-solid fa-star"></i>
-                                                <i class="fa-solid fa-star"></i>
-                                                <i class="fa-solid fa-star"></i>
-                                            </div>
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper mt-4">
+                            <div class="swiper-slide">
+                                <div class="flex gap-2">
+                                    <div class="profile">
+                                        <img src="images/profile1.jpeg">
+                                    </div>
+                                    <div>
+                                        <h4>Guy Hawkins</h4>
+                                        <div class="mt-half">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
                                         </div>
                                     </div>
-                                    <p class="para">
-                                        Fresh ingredients, creative menu, and warm service
-                                        make this spot a hidden gem. Perfect for casual dinners
-                                        or special nights out. Truly a foodie’s paradise!
-                                    </p>
                                 </div>
+                                <p class="para">
+                                    Foodie is the best. Besides the many delicious meals,
+                                    the service is also very good, especially very fast
+                                    delivery. I highly recommend Foodie to you.
+                                </p>
+                            </div>
 
-                                <div class="swiper-slide">
-                                    <div class="flex gap-2">
-                                        <div class="profile">
-                                            <img src="images/profile3.jpeg">
-                                        </div>
-                                        <div>
-                                            <h4>Olivia Smith</h4>
-                                            <div class="mt-half">
-                                                <i class="fa-solid fa-star"></i>
-                                                <i class="fa-solid fa-star"></i>
-                                                <i class="fa-solid fa-star"></i>
-                                                <i class="fa-solid fa-star"></i>
-                                            </div>
+                            <div class="swiper-slide">
+                                <div class="flex gap-2">
+                                    <div class="profile">
+                                        <img src="images/profile2.jpeg">
+                                    </div>
+                                    <div>
+                                        <h4>Sophia Anderson</h4>
+                                        <div class="mt-half">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
                                         </div>
                                     </div>
-                                    <p class="para">
-                                        Delicious dishes, cozy ambiance, and exceptional service.
-                                        A must-visit for food lovers seeking bold flavors and
-                                        unforgettable dining experiences. Highly recommended,
-                                        Every bite delights me!
-                                    </p>
                                 </div>
+                                <p class="para">
+                                    Fresh ingredients, creative menu, and warm service
+                                    make this spot a hidden gem. Perfect for casual dinners
+                                    or special nights out. Truly a foodie’s paradise!
+                                </p>
                             </div>
-                            <div class="flex between">
-                                <a href="#" class="arrow" id="prev">
-                                    <i class="fa-solid fa-arrow-left"></i>
-                                </a>
-                                <a href="#" class="arrow" id="next">
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a>
+
+                            <div class="swiper-slide">
+                                <div class="flex gap-2">
+                                    <div class="profile">
+                                        <img src="images/profile3.jpeg">
+                                    </div>
+                                    <div>
+                                        <h4>Olivia Smith</h4>
+                                        <div class="mt-half">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <p class="para">
+                                    Delicious dishes, cozy ambiance, and exceptional service.
+                                    A must-visit for food lovers seeking bold flavors and
+                                    unforgettable dining experiences. Highly recommended,
+                                    Every bite delights me!
+                                </p>
                             </div>
+                        </div>
+                        <div class="flex between">
+                            <a href="#" class="arrow" id="prev">
+                                <i class="fa-solid fa-arrow-left"></i>
+                            </a>
+                            <a href="#" class="arrow" id="next">
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -314,9 +313,9 @@
                         We recommend you to subscribe our newspaper, drop your email below to get daily update about us.
                     </p>
 
-                    <label class="input-container flex m-auto mt-4">
-                        <input type="email" name="email" id="email"
-                        placeholder="Enter your email address" autocapitalize="off">
+                    <label class="input-container flex">
+                        <input type="email" name="email" id="email" placeholder="Enter your email address"
+                            autocapitalize="off">
                         <a href="#" class="btn">Subscribe</a>
                     </label>
                 </div>
@@ -325,7 +324,81 @@
     </main>
 
     <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <div class="flex wrapper gap-4">
+                <div class="footer-wrapper">
+                    <a href="#" class="logo">Foodie.</a>
+                    <p class="mt-one-half">
+                        We will fill your tummy with delicious <br>
+                        food with fast delivery.
+                    </p>
+                    <div class="flex gap-2 mt-one-half">
+                        <a href="#" class="social-icon">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fa-brands fa-x-twitter"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fa-brands fa-google-plus-g"></i>
+                        </a>
+                    </div>
+                </div>
+                <ul class="footer-wrapper">
+                    <li>
+                        <h4>Our Menu</h4>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">Special</a>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">Popular</a>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">Category</a>
+                    </li>
+                </ul>
+                <ul class="footer-wrapper">
+                    <li>
+                        <h4>Company</h4>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">Why foodie</a>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">Partner with us</a>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">About us</a>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">FAQs</a>
+                    </li>
+                </ul>
+                <ul class="footer-wrapper">
+                    <li>
+                        <h4>Support</h4>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">Account</a>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">Support center</a>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">Feedback</a>
+                    </li>
+                    <li class="mt-one-half">
+                        <a href="#" class="footer-link">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 
 
