--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
                     </div>
 
                 </div>
-            </div>    
+            </div>
+        </section>    
 
 
         <section>
